feat: deliver v0.3 knowledge retrieval